--- a/beta.html
+++ b/beta.html
@@ -71,7 +71,7 @@
       .nav-links a { display:block; padding:8px 10px; }
     }
 
-    .tooltip-click-container { position:relative; display:inline-flex; align-items:center; gap:8px; isolation:isolate; }
+    .tooltip-click-container { position:relative; display:inline-flex; align-items:center; gap:8px; isolation:isolate; white-space:nowrap; }
     .click-icon { width:20px; height:20px; border-radius:50%; background:var(--brand); color:white; font-size:12px; display:flex; align-items:center; justify-content:center; cursor:pointer; }
     .tooltip-click-box {
       display:none;
@@ -154,8 +154,8 @@
 
         <div class="cb-field"><label for="futureretiresavings">Annual Contributions ($)</label><input id="futureretiresavings" type="number" inputmode="decimal" placeholder="e.g., 18000" /></div>
         <div class="cb-field">
-          <label for="socsecAge">Social Security Start</label>
-          <div class="tooltip-click-container" style="margin-left:6px;">
+          <label class="tooltip-click-container" for="socsecAge">
+            Social Security Start
             <span class="click-icon" id="ssInfoBtn" tabindex="0" role="button" aria-expanded="false" aria-controls="ssInfoBox">?</span>
             <div class="tooltip-click-box" id="ssInfoBox">
               Unsure how much you'll get? Use these official tools:<br><br>
@@ -164,7 +164,7 @@
               • Quick benefit estimate calculator:<br>
               <a href="https://www.ssa.gov/OACT/quickcalc/" target="_blank" rel="noopener">SSA Quick Calculator</a>
             </div>
-          </div>
+          </label>
           <input id="socsecAge" type="month" placeholder="YYYY-MM" />
         </div>
 
@@ -177,13 +177,13 @@
         <div class="cb-field"><label for="pensions">Annual Pension Amount ($) Future Dollars</label><input id="pensions" type="number" inputmode="decimal" placeholder="e.g., 12000" /></div>
 
         <div class="cb-field">
-          <label for="taxableNow">Non-Retirement Assets ($)</label>
-          <div class="tooltip-click-container" style="margin-left:6px;">
+          <label class="tooltip-click-container" for="taxableNow">
+            Non-Retirement Assets ($)
             <span class="click-icon" id="taxableInfoBtn" tabindex="0" role="button" aria-expanded="false" aria-controls="taxableInfoBox">i</span>
             <div class="tooltip-click-box" id="taxableInfoBox">
               Taxable savings/stocks/cash not in retirement accounts. In projections we use an <strong>annual tax rate</strong> on returns (default 15%). You can adjust this in Scenario Planner.
             </div>
-          </div>
+          </label>
           <input id="taxableNow" type="number" inputmode="decimal" placeholder="e.g., 30000" />
         </div>
       </div>
@@ -526,7 +526,9 @@ function runCalcHandler(){
       max: tickPositions[tickPositions.length - 1]
     },
     yAxis: { title:{ text:'Total Resources ($)' }, labels:{ formatter(){ return '$' + Highcharts.numberFormat(this.value,0) } } },
-    legend:{ enabled:true, align:'center', verticalAlign:'top', title: { text: 'Annual Interest Rate' } },
+    legend:{ enabled:true, align:'center', verticalAlign:'top',
+      title: { useHTML:true, text: '<div style="text-align:center;width:100%">Annual Interest Rate</div>' }
+    },
     tooltip:{ shared:true, formatter(){
       const x=(this.points&&this.points[0])?this.points[0].x:this.x;
       const year=Highcharts.dateFormat('%Y', x);
@@ -737,3 +739,4 @@ document.addEventListener('change', (e) => {
 
 </body>
 </html>
+
