--- a/beta.html
+++ b/beta.html
@@ -38,7 +38,7 @@
     @media (max-width: 640px){ .cb-row { grid-template-columns: 1fr; gap: 12px; } }
 
     .cb-field { display: flex; flex-direction: column; gap: 6px; }
-    label { font-size: 14px; font-weight: 600; display:flex; align-items:center; gap:8px; flex-wrap:wrap; }
+    label { font-size: 14px; font-weight: 600; display:block; } /* keep labels block to avoid layout shifts */
 
     input[type="month"], input[type="number"], select, input[type="text"] {
       font-size: 16px;
@@ -72,7 +72,8 @@
       .nav-links a { display:block; padding:8px 10px; }
     }
 
-    .tooltip-click-container { position:relative; display:inline-flex; align-items:center; gap:8px; isolation:isolate; white-space:nowrap; }
+    /* Tooltip bits */
+    .label-row{ display:inline-flex; align-items:center; gap:8px; white-space:nowrap; }
     .click-icon { width:20px; height:20px; border-radius:50%; background:var(--brand); color:white; font-size:12px; display:flex; align-items:center; justify-content:center; cursor:pointer; }
     .tooltip-click-box {
       display:none; position:absolute; inset-block-start:-10px; inset-inline-start:0; transform:translateY(-100%);
@@ -80,6 +81,7 @@
       border:1px solid var(--stroke); box-shadow:0 8px 24px rgba(2,6,23,0.15); font-size:13px; z-index:99999;
       white-space: normal; overflow-wrap: anywhere; pointer-events:auto;
     }
+    .tooltip-anchor { position:relative; display:inline-block; isolation:isolate; }
 
     .graph-row { display:grid; grid-template-columns: 2fr 1fr; gap: 20px; align-items:start; }
     @media (max-width: 900px){ .graph-row { grid-template-columns: 1fr; } }
@@ -112,9 +114,10 @@
 
     .chip { display:inline-block; padding:2px 8px; border-radius:999px; background:#eef2ff; color:#1f2a59; font-weight:700; font-size:12px; }
     .center-title{ text-align:center; }
+
+    /* mobile overflow safety */
     *,*::before,*::after{ box-sizing:border-box; }
     .legend-title-center{ display:block; width:100%; text-align:center; font-weight:700; margin-bottom:4px; }
-    .center-title{ text-align:center; }
   </style>
 
   <script src="https://code.highcharts.com/highcharts.js"></script>
@@ -165,16 +168,20 @@
         </div>
 
         <div class="cb-field">
-          <label for="socsecAmt" class="tooltip-click-container">
-            Estimated Annual Social Security ($) Future Dollars
-            <span class="click-icon" id="ssInfoBtn" tabindex="0" role="button" aria-expanded="false" aria-controls="ssInfoBox">?</span>
-            <div class="tooltip-click-box" id="ssInfoBox">
-              Unsure how much you'll get? Use these official tools:<br><br>
-              • View your personalized estimate:<br>
-              <a href="https://www.ssa.gov/myaccount" target="_blank" rel="noopener">SSA MyAccount</a><br><br>
-              • Quick benefit estimate calculator:<br>
-              <a href="https://www.ssa.gov/OACT/quickcalc/" target="_blank" rel="noopener">SSA Quick Calculator</a>
-            </div>
+          <label for="socsecAmt">
+            <span class="tooltip-anchor">
+              <span class="label-row">
+                Estimated Annual Social Security ($) Future Dollars
+                <span class="click-icon" id="ssInfoBtn" tabindex="0" role="button" aria-expanded="false" aria-controls="ssInfoBox">?</span>
+              </span>
+              <div class="tooltip-click-box" id="ssInfoBox">
+                Unsure how much you'll get? Use these official tools:<br><br>
+                • View your personalized estimate:<br>
+                <a href="https://www.ssa.gov/myaccount" target="_blank" rel="noopener">SSA MyAccount</a><br><br>
+                • Quick benefit estimate calculator:<br>
+                <a href="https://www.ssa.gov/OACT/quickcalc/" target="_blank" rel="noopener">SSA Quick Calculator</a>
+              </div>
+            </span>
           </label>
           <input id="socsecAmt" type="number" inputmode="decimal" placeholder="e.g., 24000" />
         </div>
@@ -189,12 +196,16 @@
         </div>
 
         <div class="cb-field">
-          <label for="taxableNow" class="tooltip-click-container">
-            Non-Retirement Assets ($)
-            <span class="click-icon" id="taxableInfoBtn" tabindex="0" role="button" aria-expanded="false" aria-controls="taxableInfoBox">i</span>
-            <div class="tooltip-click-box" id="taxableInfoBox">
-              Taxable savings/stocks/cash not in retirement accounts. In projections we use an <strong>annual tax rate</strong> on returns (default 0.6%). You can adjust this in Scenario Planner.
-            </div>
+          <label for="taxableNow">
+            <span class="tooltip-anchor">
+              <span class="label-row">
+                Non-Retirement Assets ($)
+                <span class="click-icon" id="taxableInfoBtn" tabindex="0" role="button" aria-expanded="false" aria-controls="taxableInfoBox">i</span>
+              </span>
+              <div class="tooltip-click-box" id="taxableInfoBox">
+                Taxable savings/stocks/cash not in retirement accounts. In projections we use an <strong>annual tax rate</strong> on returns (default 0.6%). You can adjust this in Scenario Planner.
+              </div>
+            </span>
           </label>
           <input id="taxableNow" type="number" inputmode="decimal" placeholder="e.g., 30000" />
         </div>
@@ -298,7 +309,7 @@
 </div>
 
 <script>
-// --- Tooltips that stay open while interacting with links ---
+// Tooltips that stay open while interacting with links
 function setupTooltip(btnId, boxId) {
   const btn = document.getElementById(btnId);
   const box = document.getElementById(boxId);
@@ -307,9 +318,12 @@ function setupTooltip(btnId, boxId) {
   const show = () => { box.style.display = 'block'; btn.setAttribute('aria-expanded','true'); open = true; };
   const hide = () => { box.style.display = 'none'; btn.setAttribute('aria-expanded','false'); open = false; };
   const toggle = () => (open ? hide() : show());
+
   btn.addEventListener('click', (e)=>{ e.preventDefault(); e.stopPropagation(); toggle(); });
   btn.addEventListener('keydown', (e)=>{ if(e.key==='Enter' || e.key===' '){ e.preventDefault(); e.stopPropagation(); toggle(); } });
-  box.addEventListener('click', (e)=> e.stopPropagation()); // allow clicking inside
+  // keep popup open while clicking inside
+  box.addEventListener('click', (e)=> e.stopPropagation());
+  // close on outside click or Esc
   document.addEventListener('click', hide);
   document.addEventListener('keydown', (e)=>{ if(e.key==='Escape') hide(); });
 }
@@ -334,7 +348,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
 <script>
 let hcChart = null;
-const TAX_RATE_DEFAULT = 0.006; // 0.6% default tax rate
+const TAX_RATE_DEFAULT = 0.006; // 0.6% annual tax rate on taxable returns
 const SS_COLA = 0.02;
 
 function parseDate(s){ if(!s) return null; const [y,m] = s.split('-').map(Number); return new Date(y,(m||1)-1,1); }
@@ -469,7 +483,7 @@ function runCalcHandler(){
     let balRet = retireNow; let balTax = taxableNow; const totalBal = [];
     for (let i=0; i<timeline.length; i++){
       const y = timeline[i];
-      const rRet = rate; // retirement accounts grow pre-tax here
+      const rRet = rate; // retirement accounts
       const rTax = Math.max(0, rate * (1 - TAX_RATE_DEFAULT)); // after-tax growth approx
       balRet *= (1 + rRet); balTax *= (1 + rTax);
       balRet += flowContribRet[i];
@@ -491,26 +505,36 @@ function runCalcHandler(){
 
   const tickPositions = []; for (let y = retireYear - 5; y <= endYear; y++) tickPositions.push(Date.UTC(y,0,1));
 
-  if (hcChart) hcChart.destroy();
-  hcChart = Highcharts.chart('chart', {
-    chart: { zooming:{type:'x'}, backgroundColor:'transparent', height: 360, reflow: true },
-    title: { text:null },
-    xAxis: { type:'datetime', tickPositions, labels:{ style:{fontSize:'10px'}, formatter(){ return Highcharts.dateFormat('%Y', this.value); } }, min: tickPositions[0], max: tickPositions[tickPositions.length - 1], title:{ text:'Year' } },
-    yAxis: { title:{ text:'Total Resources ($)' }, labels:{ formatter(){ return '$' + Highcharts.numberFormat(this.value,0) } } },
-    legend:{ enabled:true, align:'center', verticalAlign:'top', layout:'horizontal',
-      title: { useHTML:true, text: '<div class="legend-title-center">Annual Interest Rate</div>' }
-    } },
-    tooltip:{ shared:true, formatter(){ const x=(this.points&&this.points[0])?this.points[0].x:this.x; const year=Highcharts.dateFormat('%Y', x); const lines=(this.points||[this.point]).map(p=>`<span style="color:${p.color}">●</span> ${p.series.name}: <b>$${Highcharts.numberFormat(p.y, 0)}</b>`).join('<br/>'); return `<b>${year}</b><br/>${lines}`; }},
-    credits:{ enabled:false },
-    series:[
-      { name:'3% interest', data:filter(p3), type:'line', lineWidth:2 },
-      { name:'5% interest', data:filter(p5), type:'line', lineWidth:2 },
-      { name:'7% interest', data:filter(p7), type:'line', lineWidth:2 },
-      { name:'9% interest', data:filter(p9), type:'line', lineWidth:2 }
-    ]
-  });
+  try {
+    if (hcChart) hcChart.destroy();
+    hcChart = Highcharts.chart('chart', {
+      chart: { zooming:{type:'x'}, backgroundColor:'transparent', height: 360, reflow: true },
+      title: { text:null },
+      xAxis: { type:'datetime', tickPositions, labels:{ style:{fontSize:'10px'}, formatter(){ return Highcharts.dateFormat('%Y', this.value); } }, min: tickPositions[0], max: tickPositions[tickPositions.length - 1], title:{ text:'Year' } },
+      yAxis: { title:{ text:'Total Resources ($)' }, labels:{ formatter(){ return '$' + Highcharts.numberFormat(this.value,0) } } },
+      legend:{ enabled:true, align:'center', verticalAlign:'top', layout:'horizontal',
+        title: { useHTML:true, text: '<div class="legend-title-center">Annual Interest Rate</div>' }
+      },
+      tooltip:{ shared:true, formatter(){
+        const x=(this.points&&this.points[0])?this.points[0].x:this.x;
+        const year=Highcharts.dateFormat('%Y', x);
+        const lines=(this.points||[this.point]).map(p=>`<span style="color:${p.color}">●</span> ${p.series.name}: <b>$${Highcharts.numberFormat(p.y, 0)}</b>`).join('<br/>');
+        return `<b>${year}</b><br/>${lines}`;
+      }},
+      credits:{ enabled:false },
+      series:[
+        { name:'3% interest', data:filter(p3), type:'line', lineWidth:2 },
+        { name:'5% interest', data:filter(p5), type:'line', lineWidth:2 },
+        { name:'7% interest', data:filter(p7), type:'line', lineWidth:2 },
+        { name:'9% interest', data:filter(p9), type:'line', lineWidth:2 }
+      ]
+    });
+    setTimeout(()=>{ if(hcChart) hcChart.reflow(); }, 0);
+  } catch (e) {
+    console.error(e);
+    alert('Charts failed to load. If you use Brave, allow scripts for this page or disable Shields for this site.');
+  }
 
-  setTimeout(()=>{ if(hcChart) hcChart.reflow(); }, 0);
   showScenarioPrompt();
 }
 
@@ -542,7 +566,7 @@ function buildScenarioCharts() {
   const retireYear = retireDate.getFullYear();
 
   const ssStr = document.getElementById('socsecAge').value;
-  const ssAmtAnnual = Number(document.getElementById('socsecAmt').value || 0);
+  the_ss_amt = Number(document.getElementById('socsecAmt').value || 0);
   const penStr = document.getElementById('pensiondate').value;
   const penAmtAnnual = Number(document.getElementById('pensions').value || 0);
 
@@ -578,7 +602,7 @@ function buildScenarioCharts() {
 
   const ssStartYear = ssStart ? ssStart.getFullYear() : null;
   const ssMonthly = (ssStartYear && ssStartYear <= retireYear)
-    ? (ssAmtAnnual * Math.pow(1 + SS_COLA, Math.max(0, retireYear - ssStartYear))) / 12
+    ? (the_ss_amt * Math.pow(1 + SS_COLA, Math.max(0, retireYear - ssStartYear))) / 12
     : 0;
   const penMonthly = (penStart && penStart.getFullYear() <= retireYear) ? (penAmtAnnual / 12) : 0;
   const retWdMonthly = (wdRate * balRet0) / 12;
@@ -619,7 +643,7 @@ function buildScenarioCharts() {
     const needAnnual = monthlyNeedToday * 12 * Math.pow(1 + infl, yrsFromToday);
     needLine.push([Date.UTC(y,0,1), needAnnual]);
 
-    const ssAnnual = (ssStartYear && ssStartYear <= y) ? ssAmtAnnual * Math.pow(1 + SS_COLA, Math.max(0, y - ssStartYear)) : 0;
+    const ssAnnual = (ssStartYear && ssStartYear <= y) ? the_ss_amt * Math.pow(1 + SS_COLA, Math.max(0, y - ssStartYear)) : 0;
     const penAnnual = (penStart && penStart.getFullYear() <= y) ? penAmtAnnual : 0;
 
     r *= (1 + rNom);
@@ -648,7 +672,15 @@ function buildScenarioCharts() {
     xAxis: { type: 'datetime', labels:{ format:'{value:%Y}', style:{fontSize:'10px'} }, tickInterval: 365*24*3600*1000, title:{ text:'Year' } },
     yAxis: { title: { text: 'Annual Amount ($)' }, labels: { formatter(){ return '$' + Highcharts.numberFormat(this.value, 0); } } },
     legend: { align:'center', verticalAlign:'top' },
-    tooltip: { shared: true, xDateFormat: '%Y', formatter: function(){ const year = Highcharts.dateFormat('%Y', this.x ?? (this.points && this.points[0]?.x)); const pts = this.points || [this.point]; const totalIncome = pts.filter(p => p.series.type === 'column').reduce((s,p)=>s+p.y,0); const needPt = pts.find(p => p.series.type === 'line'); const needVal = needPt ? needPt.y : null; const lines = pts.map(p => `<span style="color:${p.color}">●</span> ${p.series.name}: <b>$${Highcharts.numberFormat(p.y,0)}</b>`).join('<br/>'); return `<b>${year}</b><br/>${lines}<br/><b>Total income: $${Highcharts.numberFormat(totalIncome,0)}</b>` + (needVal!=null ? `<br/><b>Need: $${Highcharts.numberFormat(needVal,0)}</b>` : ''); } },
+    tooltip: { shared: true, xDateFormat: '%Y', formatter: function(){
+      const year = Highcharts.dateFormat('%Y', this.x ?? (this.points && this.points[0]?.x));
+      const pts = this.points || [this.point];
+      const totalIncome = pts.filter(p => p.series.type === 'column').reduce((s,p)=>s+p.y,0);
+      const needPt = pts.find(p => p.series.type === 'line');
+      const needVal = needPt ? needPt.y : null;
+      const lines = pts.map(p => `<span style="color:${p.color}">●</span> ${p.series.name}: <b>$${Highcharts.numberFormat(p.y,0)}</b>`).join('<br/>');
+      return `<b>${year}</b><br/>${lines}<br/><b>Total income: $${Highcharts.numberFormat(totalIncome,0)}</b>` + (needVal!=null ? `<br/><b>Need: $${Highcharts.numberFormat(needVal,0)}</b>` : '');
+    }},
     plotOptions: { column: { stacking: 'normal' } },
     credits: { enabled:false },
     series: [
@@ -675,5 +707,4 @@ document.addEventListener('change', (e) => {
 
 </body>
 </html>
-
 
